# llm-VS-stockfish

./: README.md  pyproject.toml
llm-vs-stockfish/: .txt  ChessGameExperiment.csv  ChessGameExperimentLlama.csv  Visualize_game.ipynb  chess_game_manager.py  learn_stockfish.py  llm_player.py  prompter.py  stockfish_player.py
